--- a/package.json
+++ b/package.json
@@ -8,19 +8,38 @@
     "@types/node": "^12.0.7",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
+    "bcrypt-nodejs": "0.0.3",
+    "config": "^3.1.0",
     "d3": "^5.9.2",
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
+    "express-form-data": "^2.0.8",
+    "mongodb": "^3.2.7",
+    "mongodb-migrations": "^0.8.5",
+    "mongoose": "^5.5.14",
+    "mongoose-unique-validator": "^2.0.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "typescript": "^3.5.1"
+    "react-router-dom": "^5.0.1",
+    "typescript": "^3.5.1",
+    "webpack": "^4.33.0",
+    "webpack-dev-middleware": "^3.7.0",
+    "webpack-hot-middleware": "^2.25.0"
   },
   "devDependencies": {
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.3.4",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.3.4",
+    "babel-plugin-syntax-async-functions": "^6.13.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "NODE_ENV=development nodemon --watch server --exec babel-node -- server/index.js"
   },
   "eslintConfig": {
     "extends": "react-app"
