--- a/package.json
+++ b/package.json
@@ -8,38 +8,51 @@
     "@types/node": "^12.0.7",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
+    "axios": "^0.19.0",
     "bcrypt-nodejs": "0.0.3",
+    "bootstrap": "^4.3.1",
+    "classnames": "^2.2.6",
     "config": "^3.1.0",
     "d3": "^5.9.2",
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
     "express-form-data": "^2.0.8",
+    "lodash": "^4.17.11",
     "mongodb": "^3.2.7",
     "mongodb-migrations": "^0.8.5",
     "mongoose": "^5.5.14",
     "mongoose-unique-validator": "^2.0.3",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.1",
+    "reactstrap": "^8.0.0",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "typescript": "^3.5.1",
     "webpack": "^4.33.0",
     "webpack-dev-middleware": "^3.7.0",
     "webpack-hot-middleware": "^2.25.0"
   },
   "devDependencies": {
-    "react-scripts": "3.0.1",
     "@babel/cli": "^7.1.5",
     "@babel/core": "^7.3.4",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.3.4",
-    "babel-plugin-syntax-async-functions": "^6.13.0"
+    "babel-plugin-syntax-async-functions": "^6.13.0",
+    "migrate-mongo": "^6.0.0",
+    "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "NODE_ENV=development nodemon --watch server --exec babel-node -- server/index.js"
+    "server": "NODE_ENV=development nodemon --watch server --exec babel-node -- server/index.js",
+    "migrate_dev": "NODE_ENV=development migrate-mongo up"
   },
   "eslintConfig": {
     "extends": "react-app"
