--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongodb-migrations": "^0.8.5",
     "mongoose": "^5.5.14",
     "mongoose-unique-validator": "^2.0.3",
+    "normalizr": "^3.4.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
